--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>API Project Two</title>
 </head>
 <body>
-
+<h1>Hello</h1>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
