--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <title>API Project Two</title>
 </head>
 <body>
-<h1>Hello</h1>
+<h1>Mars Rover Photos</h1>
+<form>
+    <label for="roverName">Select a Rover:</label>
+    <select id="roverName" name="roverName">
+        <option value="Curiosity">Curiosity</option>
+        <option value="Spirit">Spirit</option>
+        <option value="Opportunity">Opportunity</option>
+        <option value="Perseverance">Perseverance</option>
+    </select>
+    <button id="firstSubmit">Submit</button>
+    <div id="roverCameraSelection"></div>
+    <div id="earthDateSelection"></div>
+</form>
+
     <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
@@ -19,5 +33,6 @@
 <!-- Initialize Firebase -->
 <script src="/__/firebase/init.js"></script>
 <script src="./script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
