--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,16 @@
     
     <select class="form-control" id="cameraSelection" name="cameraSelection"><option value="">Select A Camera</option></select>
     <div id="solSelection">
-    <label for="solEntry">Choose a sol (day on Mars) since the rover has landed:</label>
+    <label for="solEntry">Choose a sol (day on Mars since the rover has landed):</label>
     <input class="form-control" type="number" id="solEntry" name="solEntry">
     </div>
     <button type="submit" id="secondSubmit" form="form2">Submit</button>
 </form>
 </div>
 <div class="container output">
-    <h2 id="resultsHeader" class="row"></h2>
+    <h2 id="resultsHeader" class="row">
+        <div>Please make selections to see photos.</div>
+    </h2>
     <div class="row results justify-content-center">
     </div>
 </div>
