more formatting of results

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 </div>
 <div class="container output">
     <h2 id="resultsHeader" class="row">
-        <div>Please make selections to see photos.</div>
+        <div id="noInput">Please make selections to see photos.</div>
     </h2>
     <div class="row results justify-content-center">
     </div>
